# ethers-hashing-examples

ethers-rs/: Cargo.toml
ethers-rs/src/: lib.rs
ethers.js/: README.md  main.ts  package.json  tsconfig.json
web3.py/: README.md  main.py  requirements.txt  test_main.py
web3.py/contracts/: Permit.sol
web3.py/tests/: test_main.py
