[package]
name = "ethers-hashing-examples"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["legacy"]}
hex = { version = "0.4.3", default-features = false, features = ["std"] }
